feat: add currency change confirmation dialog with localization
- Add currency change confirmation dialog when lines exist
- Implement line item recalculation on currency change
- Add localization keys for currency change dialog (TR/EN)
- Recalculate all line item prices when currency changes

--- a/src/locales/en/quotation.json
+++ b/src/locales/en/quotation.json
@@ -27,7 +27,11 @@
     "description": "Description",
     "descriptionPlaceholder": "Enter description",
     "offerNo": "Offer No",
-    "offerNoPlaceholder": "Offer number"
+    "offerNoPlaceholder": "Offer number",
+    "currencyChange": {
+      "title": "Currency Change",
+      "message": "When the currency changes, all existing lines will be recalculated according to the new currency. Do you approve this operation?"
+    }
   },
   "lines": {
     "title": "Quotation Lines",
