feat: display mandatory status for related stocks in stock relations

--- a/src/locales/tr/stock.json
+++ b/src/locales/tr/stock.json
@@ -52,6 +52,8 @@
     "description": "Açıklama",
     "descriptionPlaceholder": "Açıklama giriniz (opsiyonel)",
     "isMandatory": "Zorunlu",
+    "mandatory": "Zorunlu",
+    "optional": "Opsiyonel",
     "delete": "Sil",
     "actions": "İşlemler",
     "noRelations": "Henüz bağlı stok eklenmemiş",
