--- a/src/locales/en/stock.json
+++ b/src/locales/en/stock.json
@@ -52,6 +52,8 @@
     "description": "Description",
     "descriptionPlaceholder": "Enter description (optional)",
     "isMandatory": "Mandatory",
+    "mandatory": "Mandatory",
+    "optional": "Optional",
     "delete": "Delete",
     "actions": "Actions",
     "noRelations": "No related stocks added yet",
