feat: add activity type management to sidebar navigation and routes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -92,6 +92,7 @@
     "quotationApprovalManagement": "Quotation Approval Management",
     "approvalWorkflowManagement": "Approval Workflow Management",
     "activityManagement": "Activity Management",
+    "activityTypeManagement": "Activity Type Management",
     "pricingRuleManagement": "Pricing Rule Management",
     "stockManagement": "Stock Management",
     "settings": "Settings",
