--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -92,6 +92,7 @@
     "quotationApprovalManagement": "Teklif Onay Yönetimi",
     "approvalWorkflowManagement": "Onay İş Akışı Yönetimi",
     "activityManagement": "Aktivite Yönetimi",
+    "activityTypeManagement": "Aktivite Tipi Yönetimi",
     "pricingRuleManagement": "Fiyat Kuralı Yönetimi",
     "stockManagement": "Stok Yönetimi",
     "settings": "Ayarlar",
