--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -68,6 +68,11 @@
     "dailyTasks": "Günlük İşler",
     "erpCustomerManagement": "ERP Müşteri",
     "approvals": "Bekleyen Onaylar",
+    "approvalDefinitions": "Onay Tanım Grubu",
+    "approvalRoleGroupManagement": "Onay Rol Grubu Yönetimi",
+    "approvalUserRoleManagement": "Onay Kullanıcı Rolü Yönetimi",
+    "approvalRoleManagement": "Onay Rolü Yönetimi",
+    "approvalFlowManagement": "Onay Akışı Yönetimi",
     "routes": "Rotalar",
     "orders": "Siparişler",
     "campaigns": "Kampanyalar",
@@ -1173,6 +1178,168 @@
       "updateError": "Ünvan güncellenemedi",
       "deleteSuccess": "Ünvan başarıyla silindi",
       "deleteError": "Ünvan silinemedi"
+    }
+  },
+  "approvalRoleGroup": {
+    "menu": "Onay Rol Grubu Yönetimi",
+    "description": "Onay rol gruplarını yönetin ve düzenleyin",
+    "addButton": "Yeni Onay Rol Grubu Ekle",
+    "table": {
+      "id": "ID",
+      "name": "Grup Adı",
+      "createdDate": "Oluşturulma Tarihi",
+      "createdBy": "Oluşturan Kullanıcı",
+      "showing": "{{from}}-{{to}} / {{total}} gösteriliyor",
+      "page": "Sayfa {{current}} / {{total}}"
+    },
+    "form": {
+      "addTitle": "Yeni Onay Rol Grubu Ekle",
+      "editTitle": "Onay Rol Grubu Düzenle",
+      "addDescription": "Yeni onay rol grubu bilgilerini girin",
+      "editDescription": "Onay rol grubu bilgilerini düzenleyin",
+      "name": "Grup Adı",
+      "namePlaceholder": "Grup adını girin",
+      "name.required": "Grup adı zorunludur",
+      "name.maxLength": "Grup adı en fazla 100 karakter olabilir"
+    },
+    "delete": {
+      "confirmTitle": "Onay Rol Grubunu Sil",
+      "confirmMessage": "{{name}} onay rol grubunu silmek istediğinizden emin misiniz?"
+    },
+    "messages": {
+      "createSuccess": "Onay rol grubu başarıyla oluşturuldu",
+      "createError": "Onay rol grubu oluşturulamadı",
+      "updateSuccess": "Onay rol grubu başarıyla güncellendi",
+      "updateError": "Onay rol grubu güncellenemedi",
+      "deleteSuccess": "Onay rol grubu başarıyla silindi",
+      "deleteError": "Onay rol grubu silinemedi"
+    }
+  },
+  "approvalUserRole": {
+    "menu": "Onay Kullanıcı Rolü Yönetimi",
+    "description": "Onay kullanıcı rollerini yönetin ve düzenleyin",
+    "addButton": "Yeni Onay Kullanıcı Rolü Ekle",
+    "table": {
+      "id": "ID",
+      "userFullName": "Kullanıcı",
+      "approvalRoleName": "Onay Rolü",
+      "createdDate": "Oluşturulma Tarihi",
+      "createdBy": "Oluşturan Kullanıcı",
+      "showing": "{{from}}-{{to}} / {{total}} gösteriliyor",
+      "page": "Sayfa {{current}} / {{total}}"
+    },
+    "form": {
+      "addTitle": "Yeni Onay Kullanıcı Rolü Ekle",
+      "editTitle": "Onay Kullanıcı Rolü Düzenle",
+      "addDescription": "Yeni onay kullanıcı rolü bilgilerini girin",
+      "editDescription": "Onay kullanıcı rolü bilgilerini düzenleyin",
+      "userId": "Kullanıcı",
+      "selectUser": "Kullanıcı Seçin",
+      "noUserSelected": "Kullanıcı seçilmedi",
+      "userId.required": "Kullanıcı seçimi zorunludur",
+      "approvalRoleId": "Onay Rolü",
+      "selectApprovalRole": "Onay Rolü Seçin",
+      "noApprovalRoleSelected": "Onay rolü seçilmedi",
+      "approvalRoleId.required": "Onay rolü seçimi zorunludur"
+    },
+    "delete": {
+      "confirmTitle": "Onay Kullanıcı Rolünü Sil",
+      "confirmMessage": "Bu onay kullanıcı rolünü silmek istediğinizden emin misiniz?"
+    },
+    "messages": {
+      "createSuccess": "Onay kullanıcı rolü başarıyla oluşturuldu",
+      "createError": "Onay kullanıcı rolü oluşturulamadı",
+      "updateSuccess": "Onay kullanıcı rolü başarıyla güncellendi",
+      "updateError": "Onay kullanıcı rolü güncellenemedi",
+      "deleteSuccess": "Onay kullanıcı rolü başarıyla silindi",
+      "deleteError": "Onay kullanıcı rolü silinemedi"
+    }
+  },
+  "approvalRole": {
+    "menu": "Onay Rolü Yönetimi",
+    "description": "Onay rollerini yönetin ve düzenleyin",
+    "addButton": "Yeni Onay Rolü Ekle",
+    "table": {
+      "id": "ID",
+      "approvalRoleGroupName": "Rol Grubu",
+      "name": "Rol Adı",
+      "createdDate": "Oluşturulma Tarihi",
+      "createdBy": "Oluşturan Kullanıcı",
+      "showing": "{{from}}-{{to}} / {{total}} gösteriliyor",
+      "page": "Sayfa {{current}} / {{total}}"
+    },
+    "form": {
+      "addTitle": "Yeni Onay Rolü Ekle",
+      "editTitle": "Onay Rolü Düzenle",
+      "addDescription": "Yeni onay rolü bilgilerini girin",
+      "editDescription": "Onay rolü bilgilerini düzenleyin",
+      "approvalRoleGroupId": "Onay Rol Grubu",
+      "selectApprovalRoleGroup": "Onay Rol Grubu Seçin",
+      "noApprovalRoleGroupSelected": "Onay rol grubu seçilmedi",
+      "approvalRoleGroupId.required": "Onay rol grubu seçimi zorunludur",
+      "name": "Rol Adı",
+      "namePlaceholder": "Rol adını girin",
+      "name.required": "Rol adı zorunludur",
+      "name.maxLength": "Rol adı en fazla 100 karakter olabilir"
+    },
+    "delete": {
+      "confirmTitle": "Onay Rolünü Sil",
+      "confirmMessage": "{{name}} onay rolünü silmek istediğinizden emin misiniz?"
+    },
+    "messages": {
+      "createSuccess": "Onay rolü başarıyla oluşturuldu",
+      "createError": "Onay rolü oluşturulamadı",
+      "updateSuccess": "Onay rolü başarıyla güncellendi",
+      "updateError": "Onay rolü güncellenemedi",
+      "deleteSuccess": "Onay rolü başarıyla silindi",
+      "deleteError": "Onay rolü silinemedi"
+    }
+  },
+  "approvalFlow": {
+    "menu": "Onay Akışı Yönetimi",
+    "description": "Onay akışlarını yönetin ve düzenleyin",
+    "addButton": "Yeni Onay Akışı Ekle",
+    "documentType": {
+      "offer": "Teklif",
+      "request": "Talep",
+      "order": "Sipariş"
+    },
+    "table": {
+      "id": "ID",
+      "documentType": "Belge Tipi",
+      "description": "Açıklama",
+      "isActive": "Aktif",
+      "createdDate": "Oluşturulma Tarihi",
+      "createdBy": "Oluşturan Kullanıcı",
+      "showing": "{{from}}-{{to}} / {{total}} gösteriliyor",
+      "page": "Sayfa {{current}} / {{total}}"
+    },
+    "form": {
+      "addTitle": "Yeni Onay Akışı Ekle",
+      "editTitle": "Onay Akışı Düzenle",
+      "addDescription": "Yeni onay akışı bilgilerini girin",
+      "editDescription": "Onay akışı bilgilerini düzenleyin",
+      "documentType": "Belge Tipi",
+      "selectDocumentType": "Belge tipi seçin",
+      "noDocumentTypeSelected": "Belge tipi seçilmedi",
+      "documentType.required": "Belge tipi seçimi zorunludur",
+      "description": "Açıklama",
+      "descriptionPlaceholder": "Açıklama girin (opsiyonel)",
+      "description.maxLength": "Açıklama en fazla 200 karakter olabilir",
+      "isActive": "Aktif",
+      "isActiveDescription": "Onay akışının aktif durumu"
+    },
+    "delete": {
+      "confirmTitle": "Onay Akışını Sil",
+      "confirmMessage": "Bu onay akışını silmek istediğinizden emin misiniz?"
+    },
+    "messages": {
+      "createSuccess": "Onay akışı başarıyla oluşturuldu",
+      "createError": "Onay akışı oluşturulamadı",
+      "updateSuccess": "Onay akışı başarıyla güncellendi",
+      "updateError": "Onay akışı güncellenemedi",
+      "deleteSuccess": "Onay akışı başarıyla silindi",
+      "deleteError": "Onay akışı silinemedi"
     }
   },
   "userManagement": {
