--- a/src/locales/tr/common.json
+++ b/src/locales/tr/common.json
@@ -99,6 +99,7 @@
     "activityManagement": "Aktivite Yönetimi",
     "activityTypeManagement": "Aktivite Tipi Yönetimi",
     "pricingRuleManagement": "Fiyat Kuralı Yönetimi",
+    "documentSerialTypeManagement": "Dosya Tip Yönetimi",
     "stockManagement": "Stok Yönetimi",
     "settings": "Ayarlar",
     "logout": "Çıkış Yap"
