feat(i18n): register missing modules and add de/fr locale placeholders

--- a/src/locales/de/stock.json
+++ b/src/locales/de/stock.json
@@ -11,7 +11,10 @@
     "actions": "Aktionen",
     "viewDetail": "Details",
     "showing": "{{from}}-{{to}} / {{total}} angezeigt",
-    "page": "Seite {{current}} / {{total}}"
+    "page": "Seite {{current}} / {{total}}",
+    "noData": "Keine Datensätze gefunden",
+    "previous": "Vorherige",
+    "next": "Nächste"
   },
   "detail": {
     "title": "Bestandsdetails",
@@ -21,6 +24,28 @@
     "relations": "Verwandte Bestände",
     "save": "Speichern",
     "cancel": "Abbrechen",
+    "created": "Erstellt",
+    "updated": "Aktualisiert",
+    "copied": "Kopiert",
+    "copy": "Kopieren",
+    "notFound": "Bestand nicht gefunden",
+    "backToStockList": "Zurück zur Liste",
+    "gallery": "Galerie",
+    "mainInfo": "Basisdaten",
+    "groupInfo": "Gruppierung und Standort",
+    "specialCodes": "Spezialcodes",
+    "ureticiKodu": "Herstellercode",
+    "grup": "Gruppeninfo",
+    "branchCode": "Filialcode",
+    "kod1": "CODE 1",
+    "kod2": "CODE 2",
+    "kod3": "CODE 3",
+    "kod4": "CODE 4",
+    "kod5": "CODE 5",
+    "summary": "Schnellansicht",
+    "subtitle": "Bestandsdetailverwaltung",
+    "notFoundDesc": "Der gesuchte Bestandsdatensatz wurde möglicherweise gelöscht oder nie erstellt.",
+    "addRelation": "Verbindung hinzufügen",
     "erpStockCode": "ERP-Bestandscode",
     "stockName": "Bestandsname",
     "unit": "Einheit",
@@ -52,13 +77,23 @@
     "description": "Beschreibung",
     "descriptionPlaceholder": "Beschreibung eingeben (optional)",
     "isMandatory": "Pflicht",
+    "mandatory": "Pflicht",
+    "optional": "Optional",
     "delete": "Löschen",
+    "cancel": "Abbrechen",
+    "deleting": "Löschen...",
     "actions": "Aktionen",
     "noRelations": "Noch keine verwandten Bestände hinzugefügt",
+    "noRelationsDesc": "Sie können neue Beziehungen über das Formular auf der linken Seite definieren.",
     "selectStock": "Bestand auswählen",
     "search": "Suchen...",
     "deleteConfirm": "Verwandten Bestand löschen",
-    "deleteConfirmMessage": "Sind Sie sicher, dass Sie den verwandten Bestand {{name}} löschen möchten?"
+    "deleteConfirmMessage": "Sind Sie sicher, dass Sie den verwandten Bestand {{name}} löschen möchten?",
+    "confirmDelete": "Ja, löschen",
+    "stockCode": "Bestandscode",
+    "stockName": "Bestandsname",
+    "noStockFound": "Lagerbestand nicht gefunden",
+    "saving": "Verarbeitung..."
   },
   "messages": {
     "detailCreateSuccess": "Bestandsdetails erfolgreich erstellt",
